Fix setting of javac

--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,5 @@
+# Typically, workspace is already set (to an absolute pathname)
+# before including this property file.
 workspace : ..
-global.build.properties : ../annotation-tools/global.build.properties
-user.build.properties: ../annotation-tools/user.build.properties
+global.build.properties : ${workspace}/annotation-tools/global.build.properties
+user.build.properties: ${workspace}/annotation-tools/user.build.properties
