Eliminate dependence on JAVA_HOME environment variable

--- a/build.xml
+++ b/build.xml
@@ -9,11 +9,6 @@
 
   <dirname property="ant.file.dir" file="${ant.file}"/>
 
-  <exec executable="sh" outputproperty="computed.JAVA_HOME">
-    <arg value="-c" />
-    <arg value="dirname $(dirname $(readlink -f $(/usr/bin/which java)))" />
-  </exec>
-
   <property name="tmpdir" value="${java.io.tmpdir}/${user.name}/javarifier-temp" />
   <property name="temp-bin" value="${tmpdir}/bin"/>
   <property name="distdir" value="${tmpdir}/javarifier"/>
@@ -56,13 +51,6 @@
         unless="exists.user.build.properties"
         message="File ${user.build.properties} file not found."/>
       <property file="${user.build.properties}"/>
-
-      <condition property="java_home" value="${env.JAVA_HOME}" else="${computed.JAVA_HOME}">
-        <isset property="${env.JAVA_HOME}"/>
-      </condition>
-      <!-- For debugging: -->
-      <!-- <echo>java_home = ${java_home}</echo> -->
-      <fail unless="java_home" message="JAVA_HOME is not set"/>
 
       <property name="jsr308-javac" location="${annotations-compiler}/dist/bin/javac" />
       <property name="checkers-javac" location="${checkers}/binary/javac" />
@@ -313,8 +301,8 @@
       <env key="CLASSPATH" path="${toString:libpath}"/>
       <env key="CHECKERS" path="${checkers}"/>
       <env key="AFU" path="${afu}"/>
-      <env key="JAVA_HOME" path="${java_home}"/>
-      <env key="PATH" path="${afu}/scripts:${java_home}/bin:${env.PATH}"/>
+      <env key="JRE_HOME" path="${java.home}"/>
+      <env key="PATH" path="${afu}/scripts:${env.PATH}"/>
     </exec>
   </target>
 
@@ -332,8 +320,8 @@
       <env key="CLASSPATH" path="${checkers}/checkers.jar"/>
       <env key="CHECKERS" path="${checkers}"/>
       <env key="AFU" path="${afu}"/>
-      <env key="JAVA_HOME" path="${java_home}"/>
-      <env key="PATH" path="${afu}/scripts:${java_home}/bin:${env.PATH}"/>
+      <env key="JRE_HOME" path="${java.home}"/>
+      <env key="PATH" path="${afu}/scripts:${env.PATH}"/>
     </exec>
   </target>
 
