--- a/tests/Makefile
+++ b/tests/Makefile
@@ -10,8 +10,6 @@
 # Not /bin/sh because dash does not support "set -o pipefail".
 SHELL = /bin/bash
 
-JAVA_HOME ?= $(shell $(dirname $(dirname $(readlink -f $(/usr/bin/which java)))))
-
 TOPLEVEL_DIFFS := $(patsubst %.goal, %.diff, $(wildcard *.goal))
 TOPLEVEL_TYPECHECK_DIFFS :=  $(patsubst %.annotated.goal, %.typecheck.diff, $(wildcard *.annotated.goal))
 
@@ -19,6 +17,7 @@ JAVA_FILES := $(wildcard *.java)
 JAVARIFIER_JAVA_FILES := $(wildcard ../src/*.java)
 
 JAVARIFIER ?= ../scripts/javarifier
+JRE_HOME ?= $(shell java -cp $(JAVARIFIER)/scripts PrintJreHome)
 JSR308_JAVAC = $(CURDIR)/../../jsr308-langtools/dist/bin/javac
 CHECKERS_JAVAC = $(CURDIR)/../../checker-framework/checkers/binary/javac
 
@@ -31,9 +30,6 @@ else
   $(error "JAVAC is not set, and couldn't find $(JSR308_JAVAC) or $(CHECKERS_JAVAC)")
 endif
 endif
-
-
-JAVA_HOME ?= $(shell $(dirname $(dirname $(dirname $(readlink -f $(/usr/bin/which java))))))
 
 AFU ?= ../../annotation-tools/annotation-file-utilities
 
@@ -182,4 +178,4 @@ showvars:
 	@echo "JAVAC=${JAVAC}"
 	@echo "CLASSPATH=${CLASSPATH}"
 	@echo "CHECKERS=${CHECKERS}"
-	@echo "JAVA_HOME=${JAVA_HOME}"
+	@echo "JRE_HOME=${JRE_HOME}"
