New ant target run-tests-toplevel-debug; tests/ Makefile uses env var DEBUG_INSERT_ANNOTATIONS

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -144,7 +144,7 @@ VerifyDiffs.class : VerifyDiffs.java
 
 .PRECIOUS: annotated/%.java
 annotated/%.java: %.java %.jaif %.class
-	CLASSPATH=${CLASSPATH}:. $(AFU)/scripts/insert-annotations-to-source -o @checkers.javari.quals.ThisMutable $*.jaif  $*.java
+	CLASSPATH=${CLASSPATH}:. $(AFU)/scripts/insert-annotations-to-source ${DEBUG_INSERT_ANNOTATIONS} -o @checkers.javari.quals.ThisMutable $*.jaif  $*.java
 
 ## Why doesn't -sourcepath version work for finding the JDK??
 
