--- a/build.xml
+++ b/build.xml
@@ -327,6 +327,26 @@
     </exec>
   </target>
 
+  <target name="run-tests-toplevel-debug" depends="init-properties"
+    description="Runs Javarifier toplevel test cases">
+    <exec executable="make"
+          failonerror="true">
+      <arg value="-k"/>
+      <arg value="-C"/>
+      <arg value="${javarifier}/tests"/>
+      <arg value="showvars"/>
+      <arg value="clean-toplevel"/>
+      <arg value="toplevel-all"/>
+      <env key="JAVAC" file="${javac}" />
+      <env key="CLASSPATH" path="${checkers}/checkers.jar"/>
+      <env key="CHECKERS" path="${checkers}"/>
+      <env key="AFU" path="${afu}"/>
+      <env key="JRE_HOME" path="${java.home}"/>
+      <env key="PATH" path="${afu}/scripts:${env.PATH}"/>
+      <env key="DEBUG_INSERT_ANNOTATIONS" value="--debug"/>
+    </exec>
+  </target>
+
   <target name="etags" depends="tags">
   </target>
   <target name="tags" description="Create Emacs TAGS table">
