Try adding another environment variable to the test invocation.

--- a/build.xml
+++ b/build.xml
@@ -302,6 +302,7 @@
            can infer a value if the JAVAC environment variable is not set. -->
       <env key="JAVAC" file="${javac}" />
       <env key="JAVAC_JAR" file="${annotations-compiler-jar}"/>
+      <env key="LANGTOOLS" path="${annotations-compiler}"/>
       <env key="CLASSPATH" path="${toString:libpath}"/>
       <env key="CHECKERS" path="${checkers}"/>
       <env key="AFU" path="${afu}"/>
