Fix error introduced in the Makefile by the last update

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -22,9 +22,9 @@ JSR308_JAVAC = $(CURDIR)/../../jsr308-langtools/dist/bin/javac
 CHECKERS_JAVAC = $(CURDIR)/../../checker-framework/checkers/binary/javac
 
 ifndef JAVAC
-ifeq "$(wildcard ${JSR308_JAVAC})" "${JSR308_JAVAC}"
+ifeq "$(wildcard ${CHECKERS_JAVAC})" "${CHECKERS_JAVAC}"
   JAVAC = $(JSR308_JAVAC)
-else ifeq "$(wildcard ${CHECKERS_JAVAC})" "${CHECKERS_JAVAC}"
+else ifeq "$(wildcard ${JSR308_JAVAC})" "${JSR308_JAVAC}"
   JAVAC = $(CHECKERS_JAVAC)
 else
   $(error "JAVAC is not set, and couldn't find $(JSR308_JAVAC) or $(CHECKERS_JAVAC)")
@@ -151,7 +151,7 @@ annotated/%.java: %.java %.jaif %.class
 
 %.typecheck.diff: annotated/%.java
 # ".." in classpath is for helper classes like Cell.
-	set -o pipefail && $(JAVAC) -processor checkers.javari.JavariChecker -Xbootclasspath/p:${CHECKERS}/jdk/${JDK_NAME}.jar:${CHECKERS}/binary/javac.jar -classpath annotated:${CLASSPATH}:${CHECKERS}/build:${CHECKERS}/checkers.jar -implicit:class annotated/$*.java 2>&1 | tee $*.typecheck.diff
+	set -o pipefail && $(JAVAC) -processor checkers.javari.JavariChecker -Xbootclasspath/p:${CHECKERS}/jdk/${JDK_NAME}:${CHECKERS}/binary/javac.jar -classpath annotated:${CLASSPATH}:${CHECKERS}/build:${CHECKERS}/checkers.jar -implicit:class annotated/$*.java 2>&1 | tee $*.typecheck.diff
 
 
 # Remove all .diff, .log files from the tests directory,
