--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="lib/jasminclasses-2.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/polyglotclasses-1.3.5.jar"/>
 	<classpathentry kind="lib" path="lib/sootclasses-2.4.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/jsr308-langtools"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
