--- a/build.xml
+++ b/build.xml
@@ -59,7 +59,7 @@
       <property file="${user.build.properties}"/>
 
       <property name="jsr308-javac" location="${annotations-compiler}/dist/bin/javac" />
-      <property name="checkers-javac" location="${checkers}/binary/javac" />
+      <property name="checkers-javac" location="${checkerframework}/checker/bin/javac" />
       <condition property="javac" value="${jsr308-javac}" else="${checkers-javac}">
 	<available file="${jsr308-javac}"/>
       </condition>
@@ -77,7 +77,7 @@
         <pathelement location="${javarifier}/lib/plume.jar"/>
         <pathelement location="${javari-annotated-jdk}/bin"/>
 <!--        <pathelement location="${annotations-shared}/bin"/> -->
-        <pathelement location="${checkers}/build"/>
+        <pathelement location="${checkerframework}/checker/build"/>
         <pathelement location="${annotations-compiler}/dist/lib/javac.jar"/>
         <pathelement location="${afu}/annotation-file-utilities.jar"/>
         <pathelement location="${javarifier}/bin"/>
@@ -94,7 +94,7 @@
       <ant dir="${afu}" target="jarfile" inheritAll="false"/>
       <ant dir="${annotations-compiler}" antfile="make/build.xml"
           inheritAll="false" target="build"/>
-      <ant dir="${checkers}" target="build" inheritAll="false"/>
+      <ant dir="${checkerframework}/checker" target="build" inheritAll="false"/>
   </target>
 
   <target name="init" depends="init-properties, build-dependencies"
@@ -308,7 +308,7 @@
       <env key="JAVAC" file="${javac}" />
       <env key="LANGTOOLS" path="${annotations-compiler}"/>
       <env key="CLASSPATH" path="${toString:libpath}"/>
-      <env key="CHECKERS" path="${checkers}"/>
+      <env key="CHECKERS" path="${checkerframework}/checker"/>
       <env key="AFU" path="${afu}"/>
       <env key="JRE_HOME" path="${java.home}"/>
       <env key="JDK_NAME" path="${jdkName}"/>
@@ -327,8 +327,8 @@
       <arg value="clean-toplevel"/>
       <arg value="toplevel-all"/>
       <env key="JAVAC" file="${javac}" />
-      <env key="CLASSPATH" path="${checkers}/binary/checkers.jar"/>
-      <env key="CHECKERS" path="${checkers}"/>
+      <env key="CLASSPATH" path="${checkerframework}/checker/bin/checker.jar"/>
+      <env key="CHECKERS" path="${checkerframework}/checker"/>
       <env key="AFU" path="${afu}"/>
       <env key="JRE_HOME" path="${java.home}"/>
       <env key="PATH" path="${afu}/scripts:${env.PATH}"/>
@@ -349,8 +349,8 @@
       <arg value="clean-toplevel"/>
       <arg value="toplevel-all"/>
       <env key="JAVAC" file="${javac}" />
-      <env key="CLASSPATH" path="${checkers}/binary/checkers.jar"/>
-      <env key="CHECKERS" path="${checkers}"/>
+      <env key="CLASSPATH" path="${checkerframework}/checker/bin/checker.jar"/>
+      <env key="CHECKERS" path="${checkerframework}/checker"/>
       <env key="AFU" path="${afu}"/>
       <env key="JRE_HOME" path="${java.home}"/>
       <env key="PATH" path="${afu}/scripts:${env.PATH}"/>
@@ -374,7 +374,7 @@
     description="Runs Javarifier.  (Arguments: class names to javarify)">
 
     <property name="soot-programs" value="${user-soot-programs}:."/>
-    <property name="soot-stubs" value="${user-soot-stubs}:${checkers}/build"/>
+    <property name="soot-stubs" value="${user-soot-stubs}:${checkerframework}/checker/build"/>
     <property name="soot-worlds" value="${user-soot-worlds}:${jre1.6.0}"/>
 
      <!-- Set classpath of Javarifier to use for running Javarifier, not
